see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Sep-2010 Jean-Marie Simonet
 # [#22498] Translating Manager Extensions Types for install/uninstall messages. Thanks Sam.
 # [#22433] Editor-xtd plugins not working when no editor is selected. Thanks Mathavan.
 # [#22364] configuration.php shows writeable when it is not. Thanks Troy and Artyom.

18-Sep-2010 Jean-Marie Simonet
 #$ [#22462] Module articles Categories - update options. Thanks Bill.
 # [#22496] Commit 22440 prevents custom position from being entered. Thanks Roland
 # Correcting some components xml (extraneous files)
 # [#22497] Adding Written by in Article Edit icon overlib in front-end
 # [#22498] Translating Manager Extensions Types for install/uninstall messages.
 $ Added missing string.
  
17-Sep-2010 Jean-Marie Simonet
 # [#22466] Registration failed message when mail function doesn't work. Thanks Roland.
 # [#22100] Unable to view unpublished article in frontend. Thanks Elin.
 # [#22481] Patch: Templates Date column blank. Thanks Ole.
 $ [#22471] Module banners - description. Thanks Bill.
 # [#22470] Incorrect vertical align of system message icon in Bluestork. Thanks Viet.
 
16-Sep-2010 Jean-Marie Simonet
 $ [#22461] Module articles - newsflash - description. Thanks Bill
 # Took off forgotten echo from 22418
 # [#22448] Weblink search year gives -0001 for new weblinks. Thanks Ole.
 
15-Sep-2010 Mark Dexter
# Sample data fixes (Thanks Elin Waring) 

15-Sep-2010 Christophe Demko
 # [#22418] Category Manager page title no longer includes component name
 
15-Sep-2010 Jean-Marie Simonet
 # [#22450] Add level filter to admin categories view. Thanks Andrew and Christophe.