@@ -42,6 +42,7 @@ JDISABLED="Disabled"
 JEDITOR="Editor"
 JENABLED="Enabled"
 JFALSE="False"
+JFEATURED="Featured"
 JHIDE="Hide"
 JINVALID_TOKEN="Invalid Token"
 JLOGIN="Log in"
